Add and Fix tracing/metrics support to ForkJoinPool (#935)
* Add thread.class/thread.pool.name

* Add tracing support to ForkJoinPool

* Support tracing on ForkJoinPool

* Move fork join metrics into DoExec

* Fix ForkJoinPool metrics support on JDK 11 and above

* Fix NPE

* Fix NPE

* Fix NPE

* Separate ForkJoinPool interceptor

* Fix

* Fix CI